--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,7 @@
-$c-gray: #eee;
+$ligth-blue: #eef7ff;
+$dark-color: #1c1a26;
+$orange-color: #f9512e;
+$gray-color: #7f8096;
+$white-color: #fff;
+
+$font-inter: "Inter", sans-serif;
