--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,20 @@
-@import "utils";
+@import "./utils/vars";
+@import "./utils/mixins";
+@import "./utils/extends";
 @import "fonts";
 @import "typography";
 
-body {
-  background: $c-gray;
-}
+@import "./blocks/page.scss";
+@import "./blocks/container.scss";
+@import "./blocks/header.scss";
+@import "./blocks/link.scss";
+@import "./blocks/logo.scss";
+@import "./blocks/nav.scss";
+@import "./blocks/menu-nav.scss";
+@import "./blocks/top-part.scss";
+@import "./blocks/button.scss";
+@import "./blocks/grid.scss";
+@import "./blocks/place.scss";
+@import "./blocks/photo.scss";
+@import "./blocks/about-us.scss";
+@import "./blocks/footer.scss";
